--- a/Controls/PluginCompact.xaml
+++ b/Controls/PluginCompact.xaml
@@ -41,7 +41,8 @@
                     <StackPanel Grid.Column="0" Margin="5,0,5,0" VerticalAlignment="Top">
                         <Image Stretch="UniformToFill" Source="{Binding LastestAchievement.Icon, IsAsync=True}"
                                Height="{Binding Height}" Width="{Binding Height}"
-                               RenderOptions.BitmapScalingMode="Fant">
+                               RenderOptions.BitmapScalingMode="Fant"
+                               ImageFailed="Image_ImageFailed">
                             <Image.Style>
                                 <Style TargetType="{x:Type Image}">
                                     <Style.Triggers>
