--- a/Controls/PluginList.xaml
+++ b/Controls/PluginList.xaml
@@ -68,7 +68,8 @@
                         </Grid.ColumnDefinitions>
 
                         <StackPanel Grid.Column="0" VerticalAlignment="Top" Margin="0,5,0,0">
-                            <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant" Height="48" Width="48">
+                            <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant" Height="48" Width="48"
+                                   ImageFailed="Image_ImageFailed">
                                 <Image.Style>
                                     <Style TargetType="{x:Type Image}">
                                         <Style.Triggers>
