--- a/Views/SuccessStoryOneGameView.xaml
+++ b/Views/SuccessStoryOneGameView.xaml
@@ -43,39 +43,70 @@
                                  Height="{Binding ElementName=PART_Achievements_List_Contener, Path=ActualHeight}" />
         </Grid>
 
-        <DockPanel Grid.Column="2" Grid.Row="2">
-            <StackPanel DockPanel.Dock="Top">
-                <Label Content="{DynamicResource LOCSuccessStoryUserStats}" 
-                       FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,10" />
-            </StackPanel>
+        <Grid Grid.Column="2" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="10" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
 
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="10" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                
-                <Grid Name="PART_ScUserStats_Contener" Grid.Row="0">
-                    <controls:PluginUserStats Height="{Binding ElementName=PART_ScUserStats_Contener, Path=ActualHeight}"
-                                              IgnoreSettings="True" GameContext="{Binding GameContext}" />
-                </Grid>
 
-                <Grid Grid.Row="2" Margin="0,10,0,0"
-                      Visibility="{Binding ElementName=PART_SourceLabel, Path=Text, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}}">
+                <Label Grid.Row="0" Content="{DynamicResource LOCSuccessStoryAchStats}" FontSize="16" HorizontalAlignment="Center" />
+
+                <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="10" />
-                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
 
-                    <Label Content="{DynamicResource LOCSourceLabel}" Grid.Column="0" FontSize="8" />
-                    <TextBlock Grid.Column="2" VerticalAlignment="Center" FontSize="8">
+                    <Label Grid.Column="0" Grid.Row="0" Content="{DynamicResource LOCSuccessStoryCommon}" />
+                    <Label Grid.Column="0" Grid.Row="2" Content="{DynamicResource LOCSuccessStoryNoCommon}" />
+                    <Label Grid.Column="0" Grid.Row="4" Content="{DynamicResource LOCSuccessStoryRare}" />
+                    
+                    <Label Grid.Column="2" Grid.Row="0" Name="PART_AchCommon" Content="x / x" HorizontalAlignment="Right" />
+                    <Label Grid.Column="2" Grid.Row="2" Name="PART_AchNoCommon" Content="x / x" HorizontalAlignment="Right" />
+                    <Label Grid.Column="2" Grid.Row="4" Name="PART_AchRare" Content="x / x" HorizontalAlignment="Right" />
+                </Grid>
+            </Grid>
+            
+            <Label Grid.Row="2" Content="{DynamicResource LOCSuccessStoryUserStats}" FontSize="16" HorizontalAlignment="Center" />
+
+            <Grid Name="PART_ScUserStats_Contener" Grid.Row="4">
+                <controls:PluginUserStats Height="{Binding ElementName=PART_ScUserStats_Contener, Path=ActualHeight}"
+                                            IgnoreSettings="True" GameContext="{Binding GameContext}" />
+            </Grid>
+
+            <Grid Grid.Row="6" Margin="0,10,0,0"
+                  Visibility="{Binding ElementName=PART_SourceLabel, Path=Text, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+
+                <Label Content="{DynamicResource LOCSourceLabel}" Grid.Column="0" FontSize="8" />
+                <TextBlock Grid.Column="2" VerticalAlignment="Center" FontSize="8">
                         <Hyperlink Name="PART_SourceLink" Click="PART_SourceLink_Click">
                             <TextBlock Name="PART_SourceLabel" FontSize="8" Text="a test source" />
                         </Hyperlink>
                     </TextBlock>
-                </Grid>
             </Grid>
-        </DockPanel>
+        </Grid>
     </Grid>
 </UserControl>
