--- a/Views/SuccessStoryOneGameView.xaml
+++ b/Views/SuccessStoryOneGameView.xaml
@@ -75,13 +75,47 @@
                         <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0" Content="{DynamicResource LOCSuccessStoryCommon}" />
-                    <Label Grid.Column="0" Grid.Row="2" Content="{DynamicResource LOCSuccessStoryNoCommon}" />
-                    <Label Grid.Column="0" Grid.Row="4" Content="{DynamicResource LOCSuccessStoryRare}" />
-                    
-                    <Label Grid.Column="2" Grid.Row="0" Name="PART_AchCommon" Content="x / x" HorizontalAlignment="Right" />
-                    <Label Grid.Column="2" Grid.Row="2" Name="PART_AchNoCommon" Content="x / x" HorizontalAlignment="Right" />
-                    <Label Grid.Column="2" Grid.Row="4" Name="PART_AchRare" Content="x / x" HorizontalAlignment="Right" />
+                    <StackPanel Grid.Column="0" Grid.Row="0"  Orientation="Horizontal">
+                        <Label Content="&#127942;" Margin="0,0,5,0" />
+                        <Label Content="{DynamicResource LOCSuccessStoryCommon}" />
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="0" Grid.Row="2"  Orientation="Horizontal">
+                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="DarkGray" />
+                        <Label Content="{DynamicResource LOCSuccessStoryNoCommon}" />
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="0" Grid.Row="4"  Orientation="Horizontal">
+                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="Gold" />
+                        <Label Content="{DynamicResource LOCSuccessStoryRare}" />
+                    </StackPanel>
+
+                    <Grid Grid.Column="2" Grid.RowSpan="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="15" />
+                            <ColumnDefinition Width="auto" SharedSizeGroup="RaretyTotal" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="10" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+
+                        <Label Grid.Column="0" Grid.Row="0" Name="PART_AchCommon" Content="xxxx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="0" Grid.Row="2" Name="PART_AchNoCommon" Content="xxxx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="0" Grid.Row="4" Name="PART_AchRare" Content="xxxx" HorizontalAlignment="Right" />
+                        
+                        <Label Grid.Column="1" Grid.Row="0" Content="/" HorizontalAlignment="Center" />
+                        <Label Grid.Column="1" Grid.Row="2" Content="/" HorizontalAlignment="Center" />
+                        <Label Grid.Column="1" Grid.Row="4" Content="/" HorizontalAlignment="Center" />
+                        
+                        <Label Grid.Column="2" Grid.Row="0" Name="PART_AchCommonTotal" Content="xxxx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="2" Grid.Row="2" Name="PART_AchNoCommonTotal" Content="xx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="2" Grid.Row="4" Name="PART_AchRareTotal" Content="xxxx" HorizontalAlignment="Right" />
+                    </Grid>
                 </Grid>
             </Grid>
             
