--- a/Controls/PluginCompactList.xaml
+++ b/Controls/PluginCompactList.xaml
@@ -57,7 +57,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
-                        <StackPanel ToolTip="{Binding NameWithDateUnlock}" Margin="2">
+                        <StackPanel ToolTip="{Binding AchToolTipCompactList}" Margin="2">
                             <Image Stretch="UniformToFill" RenderOptions.BitmapScalingMode="Fant" 
                                    Width="{Binding ElementName=PART_GridContener, Path=Tag}"
                                    Height="{Binding ElementName=PART_GridContener, Path=Tag}"
